# x

./: .env.example  .gitignore  DIAGRAM.md  GEMINI.md  LICENSE  README.md  REFACTOR_PLAN.md  TODO.md  pyproject.toml  unblocker.py
.github/: dependabot.yml
scripts/: setup_cron.py
src/x_agent/: cli.py  config.py  database.py  logging_setup.py
src/x_agent/agents/: base_agent.py  blocked_ids_agent.py  delete_agent.py  insights_agent.py  unblock_agent.py  unfollow_agent.py
src/x_agent/migrations/: base.py  runner.py
src/x_agent/migrations/versions/: m001_initial.py  m002_add_listed_count.py  m003_create_deleted_tweets_table.py  m004_rename_views_to_engagement.py
src/x_agent/services/: x_service.py
src/x_agent/utils/: email_utils.py
tests/: test_blocked_ids_agent.py  test_cli.py  test_config.py  test_database.py  test_delete_agent_archive.py  test_dry_run.py  test_email_utils.py  test_insights_agent.py  test_migrations.py  test_unblock_agent.py  test_unblock_agent_id_type_validation.py  test_unfollow_agent.py  test_vulnerability_m001.py  test_x_service.py  test_x_service_retries.py
