[project]
name = "x-agent"
version = "0.1.0"
description = "A command-line tool to manage X interactions with agents."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.14.1",
    "aiosmtplib>=5.1.2",
    "async-lru>=2.0.5",
    "pydantic-settings>=2.14.2",
    "tenacity>=9.1.2",
    "tweepy",
    "typer>=0.26.7",
]

[project.scripts]
x-agent = "x_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]
